--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
 
 @font-face {
     font-family: Norse;
@@ -18,7 +19,6 @@
     height: 100vh;
     width: 100vw;
     background-size: cover;
- 
     justify-content: center;
     align-items: center;
 }
@@ -45,35 +45,81 @@ img{
     justify-content: space-between;
 }
 .description{
-    padding: 3rem 2rem;
+    padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     font-size: 1.25rem;
     font-weight: 600;
     width: 100%;
+    font-family: "Wix Madefor Display";
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgb(34, 33, 33,.1);
+    background-color: rgba(194, 193, 193, 0.5);
 }
 fieldset{
     border: none;
     display: flex;
     gap: 4rem;
+    margin-bottom: 2rem;
 }
 .form-container{
     background-color: #FFF;
-    padding: 2rem 2rem;
+    padding: 0.1rem 2rem;
     box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, .5);
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     margin-bottom: 3rem;
+    padding-top: 10px;
+}
+.form-container h3{
+    font-size: 25px;
 }
 .info{
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
     width: 33%;
+}
+button{
+    padding: 10px;
+    border-radius: 5px;
+}
+.button-area{
+    margin-left: 35px;
+    display: flex;
+    flex-direction: column;
+    width: 260px;
+}
+h3{
+    margin-bottom: 20px;
+}
+button{
+    border: none;
+    font-size: large;
+    background-color: #62818d;
+    color: white;
+    margin-bottom: 10px;
+    box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, .5);
+}
+main{
+    background-color: rgba(194, 193, 193, 0.5);
+}
+input{
+    border-radius: 5px;
+    border: none;
+    border: rgb(204, 204, 204) solid 1px;
+    width: 70%;
+    height: 30px;
+}
+a{
+    text-decoration: none;
+    color:#2a728f;
+}
+fieldset label{
+    font-size: 14px;
+    color: rgb(49, 49, 49);
+    font-family: "Wix Madefor Display";
 }
