--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap');
 
 @font-face {
@@ -45,7 +44,7 @@ img{
     justify-content: space-between;
 }
 .description{
-    padding: 1rem 2rem;
+    padding: 0.2rem 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -113,6 +112,26 @@ input{
     border: rgb(204, 204, 204) solid 1px;
     width: 70%;
     height: 30px;
+}
+input:focus{
+    border: none;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.342);
+}
+input:valid:focus{
+    border: rgb(86, 197, 86);
+}
+
+input:focus:invalid{
+    border: red;
+}
+.info p{
+    font-size: 12px;
+    font-family: "Wix Madefor Display";
+    margin-top: 10px;
+    color: white;
+    background-color: green;
+    width: 70%;
+    padding: 8px;
 }
 a{
     text-decoration: none;
